--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,22 @@
 # Site/SEO settings
-email: okay@samesies.io
+email: info@kelvinwaycrafts.com
 baseurl: ""
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
-name: Thomas Vaeth
-title: The Barber Theme
+name: Kelvinway Crafts
+title: Kelvinway Crafts
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: http://barber.samesies.io
-twitter_username: thomasvaeth
+  Handmade Products from the heart of Scotland
+url: http://www.kelvinwaycrafts.com
 default_img: /assets/images/seo.jpg
 social:
-  - name: twitter
-    url: https://twitter.com/thomasvaeth
   - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
-  - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
-  - name: github
-    url: https://github.com/samesies
-  - name: codepen
-    url: https://codepen.io/thomasvaeth/
+    url: https://www.instagram.com/kelvinwaycrafts/
+  - name: pinterest
+    url: https://www.pinterest.co.uk/e7ada066bb46a2c492038e9b81577d/things-to-wear/
+  - name: etsy
+    url: https://www.pinterest.co.uk/e7ada066bb46a2c492038e9b81577d/things-to-wear/
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
